@@ -43,6 +43,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|Exception
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|io
 operator|.
 name|ObjectInput
@@ -346,7 +356,7 @@ operator|==
 literal|null
 operator|)
 condition|?
-literal|0
+name|metadataTag
 else|:
 name|obj
 operator|.
@@ -396,6 +406,20 @@ name|metadataTag
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|Writable
+name|val
+init|=
+name|ctx
+operator|.
+name|getSerDe
+argument_list|()
+operator|.
+name|getSerializedClass
+argument_list|()
+operator|.
+name|newInstance
+argument_list|()
+decl_stmt|;
 name|val
 operator|.
 name|readFields
@@ -441,7 +465,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SerDeException
+name|Exception
 name|e
 parameter_list|)
 block|{
