@@ -43,6 +43,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|Exception
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|io
 operator|.
 name|Serializable
@@ -366,6 +376,28 @@ operator|.
 name|htree
 operator|.
 name|HTree
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|util
+operator|.
+name|jdbm
+operator|.
+name|helper
+operator|.
+name|FastIterator
 import|;
 end_import
 
@@ -1465,6 +1497,21 @@ operator|+
 name|res
 operator|.
 name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"used memory "
+operator|+
+name|Runtime
+operator|.
+name|getRuntime
+argument_list|()
+operator|.
+name|totalMemory
 argument_list|()
 argument_list|)
 expr_stmt|;
